ændre footer tilføjer til js

--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
         <ul class="menu knapper">
           <li><a href="index.html">Forside</a></li>
           <li><a href="projekt.html">Projekter</a></li>
-          <li><a href="index.html">Kontakt Mig</a></li>
+          <li><a href="#bund" class="kontakt-knap">Kontakt mig</a></li>
         </ul>
         <button class="burger">
           <span class="line"></span>
@@ -70,9 +70,6 @@
               bruge dem til at skabe løsninger, hvor kreativitet, funktionalitet
               og brugerens behov hænger sammen.
             </p>
-            <!-- <div class="grid_2-1">
-              <div class="box02"><img src="img/ommigkam.gif" alt="" /></div>
-            </div> -->
           </div>
         </div>
       </section>
@@ -85,67 +82,86 @@
             <h3>Om mig som studerende</h3>
 
             <p>
-              Jeg studerer i øjeblikket multimediedesign og har tidligere
-              arbejdet med sociale medier, medieproduktion og forskellige former
-              for content. Her har jeg fået erfaring med at tænke kreativt og
-              målrettet i forhold til formidling og visuel kommunikation.
+              Jeg studerer multimediedesign og har erfaring med sociale medier,
+              medieproduktion og content creation. Gennem både studie og arbejde
+              har jeg udviklet en kreativ og målrettet tilgang til formidling og
+              visuel kommunikation.
             </p>
             <p>
-              På uddannelsen har jeg blandt andet arbejdet med et projekt, hvor
-              jeg havde frit valg af emne. Her brugte jeg muligheden for at
-              udfolde min kreativitet og inddrage dele af min kulturelle
-              baggrund i løsningen. Det var en inspirerende proces, som gav mig
-              et tydeligt indblik i, hvor mange forskellige måder man kan skabe
-              og formidle på. Projektet har styrket min forståelse for kreativ
-              frihed og vist mig, hvordan personlige perspektiver kan være en
-              styrke i digitale og visuelle løsninger.
+              På uddannelsen har jeg blandt andet arbejdet med et selvvalgt
+              projekt, hvor jeg inddrog min kulturelle baggrund i løsningen.
+              Projektet styrkede min forståelse for kreativ frihed og viste,
+              hvordan personlige perspektiver kan være en styrke i digitale og
+              visuelle løsninger.
+            </p>
+            <p>
+              Jeg har desuden erfaring fra forskellige jobs, hvor ansvar og
+              samarbejde har været centrale. Som del af et medieteam i en
+              ungdomsklub arbejdede jeg med fotografering og målrettet
+              kommunikation, og som leder på en ungdomslejr har jeg opnået
+              stærke kompetencer inden for overblik, tydelig kommunikation og
+              teamwork.
             </p>
           </div>
-          <div class="box03"><img src="img/polaroid02.jpg" alt="" /></div>
+          <section>
+            <div class="box03"><img src="img/polaroid02.jpg" alt="" /></div>
+          </section>
         </div>
-        <!-- <div class="grid_2-1">
-          <h3>Det Handler "Om Mig"</h3>
-          <div class="grid_2-1">
-            <p>
-              Jeg studerer i øjeblikket multimediedesign og har tidligere
-              arbejdet med sociale medier, medieproduktion og forskellige former
-              for content. Her har jeg fået erfaring med at tænke kreativt og
-              målrettet i forhold til formidling og visuel kommunikation. På
-              uddannelsen har jeg blandt andet arbejdet med et projekt, hvor jeg
-              havde frit valg af emne. Her brugte jeg muligheden for at udfolde
-              min kreativitet og inddrage dele af min kulturelle baggrund i
-              løsningen. Det var en inspirerende proces, som gav mig et tydeligt
-              indblik i, hvor mange forskellige måder man kan skabe og formidle
-              på. Projektet har styrket min forståelse for kreativ frihed og
-              vist mig, hvordan personlige perspektiver kan være en styrke i
-              digitale og visuelle løsninger.
-            </p>
-            <h3>Min erhvervserfaring</h3>
-            <p>
-              Jeg har erfaring fra forskellige jobs, hvor ansvar, struktur og
-              samarbejde har været centrale elementer. Som en del af et
-              medieteam i Ungdomsklub arbejdede jeg med at indsamle information,
-              fotografere og formidle indhold til både unge og deres forældre.
-              Det gav mig praktisk erfaring med mediearbejde og tekniske opgaver
-              samt forståelse for målrettet kommunikation. Derudover har jeg
-              arbejdet som leder på en ungdomslejr, hvor jeg opnåede erfaring
-              med at bevare overblik og kommunikere tydeligt også i pressede
-              situationer. Rollen krævede tæt samarbejde og ansvar for andre,
-              hvilket har styrket mine evner inden for teamwork og ledelse.
-            </p>
-            <div class="box03"><img src="img/polaroid01.jpg" alt="" /></div>
-          </div>
-        </div> -->
       </section>
 
       <section class="bon hvid lys andenlys">
         <h1 class="hvid">Mine Projekter</h1>
       </section>
     </main>
-    <footer>
-      <button><link rel="stylesheet" href="" />Email</button>
-      <button><link rel="stylesheet" href="" />Github</button>
-      <button><link rel="stylesheet" href="" />Linkin</button>
+    <footer id="bund">
+      <div class="footer-links">
+        <a href="mailto:din.email@skole.dk">
+          <svg
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+          >
+            <path
+              d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+            />
+            <polyline points="22,6 12,13 2,6" />
+          </svg>
+          din.email@skole.dk
+        </a>
+
+        <a
+          href="https://github.com/ditbrugernavn"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+            <path
+              d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"
+            />
+          </svg>
+          GitHub
+        </a>
+
+        <a
+          href="https://linkedin.com/in/ditbrugernavn"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+            <path
+              d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+            />
+          </svg>
+          LinkedIn
+        </a>
+      </div>
+
+      <div class="footer-logo">
+        <!-- Erstat dette SVG med dit eget logo -->
+      </div>
 
       <p>Tag endelig fat i mig på disse platformer.</p>
     </footer>
