--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
         <div>
           <h1>Det Handler "Om Mig"</h1>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-            voluptas velit at quae pariatur maiores rem quod, iure inventore
-            debitis neque, magni est modi, ratione ipsa atque nesciunt cum eius!
+            Denne side er en “Om mig”-side, hvor jeg præsenterer mig selv som
+            multimediedesignstuderende med fokus på kreativitet, brugervenlighed
+            og digitale løsninger. Siden giver et personligt og fagligt indblik
+            i mine kompetencer og erfaringer.
           </p>
         </div>
       </section>
@@ -114,38 +115,48 @@
         <div class="card-container">
           <div class="card">
             <span class="card-number">01</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 1" />
+            <img
+              class="card-image"
+              src="img/introugelink01.png"
+              alt="Projekt 1"
+            />
+            <div class="card-description">Introuge</div>
+          </div>
+          <div class="card">
+            <span class="card-number">02</span>
+            <img
+              class="card-image"
+              src="img/justy488.github.io_website_ (1).png"
+              alt="Projekt 2"
+            />
             <div class="card-description">
               Min første webside med HTML og CSS
             </div>
           </div>
           <div class="card">
-            <span class="card-number">02</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 2" />
-            <div class="card-description">JavaScript calculator app</div>
-          </div>
-          <div class="card">
             <span class="card-number">03</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 3" />
-            <div class="card-description">Responsivt design til mobil</div>
+            <img class="card-image" src="img/emnecard01.png" alt="Projekt 3" />
+            <div class="card-description">Min hår hjemmeside</div>
           </div>
           <div class="card">
             <span class="card-number">04</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 4" />
+            <img
+              class="card-image"
+              src="img/emergencycard01.png"
+              alt="Projekt 4"
+            />
             <div class="card-description">
-              Portfolio website med animationer
+              En underlig nødsituation og en unik løsning
             </div>
           </div>
           <div class="card">
             <span class="card-number">05</span>
-            <img class="card-image" src="img/billedemig.JPG" alt="Projekt 5" />
-            <div class="card-description">
-              E-commerce side med shopping cart
-            </div>
+            <img class="card-image" src="img/toemner04.png" alt="Projekt 5" />
+            <div class="card-description">Redesign & Fokus på Indhold</div>
           </div>
         </div>
 
-        <button id="nextButton">Se Næste Projekt</button>
+        <button id="nextButton">Se Næste</button>
         <h3>Få et Indblik i hvad jeg har Lært</h3>
       </section>
     </main>
