--- a/projekt.html
+++ b/projekt.html
@@ -52,7 +52,7 @@
 
       <section class="projekt-section">
         <section class="beskrivelse">
-          <h1>Mine Projekter</h1>
+          <h1>Portfolio</h1>
           <p>
             Her er en oversigt over de forskellige temaer jeg har været igennem
             på denne uddannelse, hvor jeg har lært noget forskelligt i forhold
