organisere relativ sti og footer

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css_aboutme/general.css" />
     <link rel="stylesheet" href="css_aboutme/custom.css" />
     <link rel="stylesheet" href="css_aboutme/fonts.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
 
   <body>
@@ -54,7 +55,7 @@
             <img src="img/miggalleri.png" alt="" />
           </div>
           <div>
-            <h3>Det her er mig</h3>
+            <h3>Kort om mig</h3>
             <p>
               Jeg er multimediedesignstuderende med en passion for at skabe
               digitale løsninger fra bunden. Det kreative arbejde og processen
@@ -108,14 +109,20 @@
           </section>
         </div>
       </section>
-
       <section class="bon hvid lys andenlys">
-        <h1 class="hvid">Mine Projekter</h1>
+        <h3>Det her er mig</h3>
+        <div class="box03">
+          <img src="img/portræt02.png" alt="" /><cite
+            ><p>"Nu ved du lidt mere om mig"</p></cite
+          >
+        </div>
+
+        <div class="bottom-section"></div>
       </section>
     </main>
     <footer id="bund">
       <div class="footer-links">
-        <a href="mailto:din.email@skole.dk">
+        <a href="mailto:jucu0001@stud.ek.dk">
           <svg
             width="20"
             height="20"
@@ -129,11 +136,11 @@
             />
             <polyline points="22,6 12,13 2,6" />
           </svg>
-          din.email@skole.dk
+          EK - Skolemail
         </a>
 
         <a
-          href="https://github.com/ditbrugernavn"
+          href="https://github.com/Justy488"
           target="_blank"
           rel="noopener noreferrer"
         >
@@ -146,7 +153,7 @@
         </a>
 
         <a
-          href="https://linkedin.com/in/ditbrugernavn"
+          href="www.linkedin.com/in/justina-cudjoe-29476a392"
           target="_blank"
           rel="noopener noreferrer"
         >
