ændret hero til live

--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css_aboutme/general.css" />
     <link rel="stylesheet" href="css_aboutme/custom.css" />
     <link rel="stylesheet" href="css_aboutme/fonts.css" />
-    <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/forsidefooter.css" />
   </head>
 
   <body>
@@ -40,12 +40,10 @@
     <main>
       <section class="hero">
         <div class="hero-section">
-          <img src="img/ommigbillede03.jpg" alt="billed af Mig" />
+          <img src="img/billedemig.JPG" alt="billed af Mig" />
         </div>
 
-        <h1>
-          <!-- svg -->
-        </h1>
+        <h1></h1>
       </section>
 
       <section class="bon hvid lys andenlys box01">
