--- a/projekt.html
+++ b/projekt.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Om Mig</title>
-    <link rel="stylesheet" href="css/faelles.css" />
+    <link rel="stylesheet" href="css/delt.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css_projekter/style.css" />
     <link rel="stylesheet" href="css_projekter/general.css" />
