--- a/aboutme.html
+++ b/aboutme.html
@@ -66,7 +66,7 @@
     <main>
       <section class="hero">
         <div class="hero-section">
-          <img src="img/billedemig.webp" alt="billed af Mig" />
+          <img src="img/billedeafmig04.webp" alt="billed af Mig" />
         </div>
 
         <h1></h1>
@@ -76,7 +76,7 @@
         <h1>Hvem står bag projekterne?</h1>
         <div class="grid_2-1">
           <div class="forsidefoto">
-            <img src="img/miggalleri.webp" alt="" />
+            <img src="img/gallerimig.png" alt="" />
           </div>
           <div>
             <h3>Kort om mig</h3>
@@ -100,7 +100,7 @@
       </section>
 
       <section class="hvid-baggrund">
-        <h1>Min Rolle og Mine Kompetencer</h1>
+        <h1>Min Rolle og Kompetencer</h1>
         <div class="grid_2-1">
           <div>
             <h3>Om mig som studerende</h3>
