--- a/index.html
+++ b/index.html
@@ -141,69 +141,57 @@
           </p>
         </div>
       </section>
-
       <section class="bon hvid lys andenlys beskrivelse">
-        <section class="projekt-section">
-          <div>
-            <h1 class="hvid">Mine Projekter</h1>
-          </div>
-          <div class="projekt-grid">
-            <img src="img/oversigt01.png" alt="" />
-            <img src="img/oversigt01.png" alt="" />
-            <img src="img/oversigt01.png" alt="" />
-          </div>
-          <div class="projekt-grid">
-            <img src="img/oversigt01.png" alt="" />
-            <img src="img/oversigt01.png" alt="" />
-            <img src="img/oversigt01.png" alt="" />
-          </div>
-        </section>
+        <h1 class="hvid">Mine Projekter</h1>
+        <div class="knap-center">
+          <a href="projekt.html" class="tilbage-link">Se Portfolio</a>
+          <p class="beskrivelse">Få et Indblik i hvad jeg har Lært</p>
+        </div>
         <div class="card-container">
           <div class="card">
             <span class="card-number">01</span>
-            <img
-              class="card-image"
-              src="img/introugelink01.png"
-              alt="Projekt 1"
-            />
+            <img class="card-image" src="img/skole.png" alt="Projekt 1" />
             <div class="card-description">Introuge</div>
           </div>
+
           <div class="card">
             <span class="card-number">02</span>
             <img
               class="card-image"
-              src="img/justy488.github.io_website_ (1).png"
+              src="img/justy488.github.io_website_ (1).webp"
               alt="Projekt 2"
             />
-            <div class="card-description">
-              Min første webside med HTML og CSS
-            </div>
+            <div class="card-description">Første hjemmeside</div>
           </div>
+
           <div class="card">
             <span class="card-number">03</span>
-            <img class="card-image" src="img/emnecard01.png" alt="Projekt 3" />
+            <img class="card-image" src="img/hår 02.png" alt="Projekt 3" />
             <div class="card-description">Min hår hjemmeside</div>
           </div>
+
           <div class="card">
             <span class="card-number">04</span>
             <img
               class="card-image"
-              src="img/emergencycard01.png"
+              src="img/emergencyknap.png"
               alt="Projekt 4"
             />
-            <div class="card-description">
-              En underlig nødsituation og en unik løsning
-            </div>
+            <div class="card-description">Nødsituations hjemmeside</div>
           </div>
+
           <div class="card">
             <span class="card-number">05</span>
-            <img class="card-image" src="img/toemner04.png" alt="Projekt 5" />
-            <div class="card-description">Redesign & Fokus på Indhold</div>
+            <img class="card-image" src="img/lemora02.png" alt="Projekt 5" />
+            <div class="card-description">Sandkasse hjemmeside</div>
+          </div>
+
+          <div class="card">
+            <span class="card-number">06</span>
+            <img class="card-image" src="img/roser02.png" alt="Projekt 6" />
+            <div class="card-description">Virksomhedshjemmeside</div>
           </div>
         </div>
-
-        <button id="nextButton">Se Næste</button>
-        <p class="beskrivelse">Få et Indblik i hvad jeg har Lært</p>
       </section>
     </main>
     <footer id="bund">
