ændret indhold på om mig side og projekt side

--- a/projekt.html
+++ b/projekt.html
@@ -231,7 +231,7 @@
       </section>
 
       <!-- Tema beskrivelsen,  proces løsning, input -->
-      <!-- TEMA 1: INTROUGE -->
+      <!-- INTROUGE -->
       <section id="introuge-section" class="projekt-detail bon">
         <div class="container">
           <h1>INTROUGE</h1>
@@ -263,14 +263,18 @@
                 oprette og vedligeholde et offentligt GitHub-repository bruge
                 versionsstyring på et grundlæggende niveau deploye en webside
                 via GitHub Pages arbejde med digital formidling gennem tekst,
-                billeder og video
+                billeder og video. Vi blev også introduceret til forskellige
+                metoder, som vi kunne bruge til at kunne filme en titelvideo,
+                som eks. imovie.
               </p>
               <h3>Læring</h3>
               <p>
                 Projektet har lært mig at: oprette og vedligeholde et offentligt
                 GitHub-repository bruge versionsstyring på et grundlæggende
                 niveau deploye en webside via GitHub Pages arbejde med digital
-                formidling gennem tekst, billeder og video
+                formidling gennem tekst, billeder og video. Vi kunne have
+                klippet på tiktok, men fandt ud af hurtigt at det ikke
+                understøtter vandrette videoer lige, så godt.
               </p>
               <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
                 >Se Titelvideo</a
@@ -366,7 +370,10 @@
                 gennemtænkt informationsarkitektur og visuelt design, der
                 understøttede emnets budskab. Der var stor læring i UI/UX
                 elementerne, som at skabe noget visuelt og at prøve at skabe det
-                igennem programmering og gøre det tilgængelig for andre.
+                igennem programmering og gøre det tilgængelig for andre. Jeg
+                lærte meget i dette emne og især også om hvor bredt mit emne
+                kunne være og hvem min målgruppe var, så jeg fandt også ud af
+                hvordan jeg kunne snævre det ind.
               </p>
               <div class="forsidefoto">
                 <img src="img/emnesite02.png" alt="Emnesite projekt" />
@@ -405,7 +412,9 @@
               <p>
                 Fokus var på at skabe et intuitivt interface, der kunne hjælpe
                 brugere i pressede situationer med at finde den information, de
-                havde brug for, hurtigt og effektivt.
+                havde brug for, hurtigt og effektivt. Jeg lærte meget om AI
+                billede generering og brugen af vektorgrafik i forhold til svg
+                på mit site.
               </p>
               <div class="forsidefoto">
                 <img src="img/emergency02.png" alt="Emergency projekt" />
@@ -441,7 +450,7 @@
                 I dette tema arbejdede jeg med to forskellige projekter: et
                 eksperimentelt sandkassesite og et professionelt
                 virksomhedssite. Begge med fokus på redesign og
-                indholdsstrategi.(1-sandkassesite)(2-virksomhedssite)
+                indholdsstrategi.
               </p>
 
               <p>
@@ -452,6 +461,17 @@
                 projektet. Jeg fik mulighed for at arbejde meget mere med Adobe
                 tools, som firefly, After effects, Adobe express, Lightroom og
                 andet.
+              </p>
+              <p>
+                I sandkassesitet fik jeg virkelig lært at designe på en anden
+                måde, og udforske forskellige design muligheder, som jeg også
+                fik brugt under virksomhedssitet.
+              </p>
+              <p>
+                I virksomhedssitet blev jeg introduceret for SCRUM, som var
+                nyttigt i forhold til at organisere forskellige opgaver i dette
+                gruppe arbejde. Det hjalp også i forhold til at finde dage til
+                at kunne lave indhold til sitet.
               </p>
               <div class="forsidefoto">
                 <img src="img/toemnerproces01.png" alt="To emner projekt" />
@@ -552,7 +572,5 @@
     </footer>
 
     <script src="menu (1)/menu/menu.js"></script>
-
-    <script src="js/cards.js"></script>
   </body>
 </html>
