ændret indhold igen

--- a/projekt.html
+++ b/projekt.html
@@ -264,8 +264,8 @@
                 versionsstyring på et grundlæggende niveau deploye en webside
                 via GitHub Pages arbejde med digital formidling gennem tekst,
                 billeder og video. Vi blev også introduceret til forskellige
-                metoder, som vi kunne bruge til at kunne filme en titelvideo,
-                som eks. imovie.
+                metoder, som vi kunne bruge til at filme en titelvideo, som eks.
+                imovie.
               </p>
               <h3>Læring</h3>
               <p>
@@ -275,6 +275,14 @@
                 formidling gennem tekst, billeder og video. Vi kunne have
                 klippet på tiktok, men fandt ud af hurtigt at det ikke
                 understøtter vandrette videoer lige, så godt.
+              </p>
+              <h3>Resultat</h3>
+              <p>
+                Projektet resulterede i en enkel digital præsentation, hvor jeg
+                kombinerede tekst, billeder og video. Jeg fik publiceret mit
+                arbejde online via GitHub Pages og opnåede en grundlæggende
+                forståelse for digital formidling samt brug af versionsstyring
+                og forskellige medier i ét samlet projekt.
               </p>
               <a href="https://youtu.be/ycvxjUreJIg" class="tilbage-link"
                 >Se Titelvideo</a
@@ -323,6 +331,15 @@
                 og koblede det til GitHub Pages, så løsningen kunne vises som en
                 live hjemmeside direkte i browseren.
               </p>
+              <h3>Resultat</h3>
+              <p>
+                Projektet resulterede i min første fuldt kodede og responsive
+                hjemmeside, bygget fra bunden med HTML og CSS. Siden blev
+                godkendt til studiestartsprøven og udgivet som en live
+                hjemmeside via GitHub Pages. Projektet gav mig et solidt
+                fundament i webstruktur, responsivt design og et enkelt,
+                effektivt arbejdsflow.
+              </p>
 
               <div class="forsidefoto">
                 <img src="img/førsteweb04.png" alt="Introuge projekt" />
@@ -358,11 +375,12 @@
             <div>
               <h3>Projektbeskrivelse</h3>
               <p>
-                I dette projekt fik jeg frihed til at vælge et emne, der
-                interesserede mig, og bygge et website omkring det. Dette gav
-                mig mulighed for at kombinere min passion med mine tekniske
-                færdigheder. Det gav mig en indsigt i brugerforståelse,
-                prototyper
+                I dette projekt fik jeg frihed til at vælge et emne, som jeg
+                valgte, fordi jeg selv lige havde lavet mit eget hår. Det
+                interesserede mig, og jeg kunne bygge et website omkring det.
+                Dette gav mig mulighed for at kombinere min passion med mine
+                tekniske færdigheder. Det gav mig en indsigt i brugerforståelse
+                og prototyper.
               </p>
               <h3>Proces & Læring</h3>
               <p>
@@ -374,6 +392,14 @@
                 lærte meget i dette emne og især også om hvor bredt mit emne
                 kunne være og hvem min målgruppe var, så jeg fandt også ud af
                 hvordan jeg kunne snævre det ind.
+              </p>
+              <h3>Resultat</h3>
+              <p>
+                Projektet mundede ud i et tematisk website, hvor jeg kombinerede
+                personligt engagement med tekniske og visuelle løsninger.
+                Resultatet var en målrettet og sammenhængende brugeroplevelse
+                med fokus på UI/UX, målgruppeforståelse og tydelig formidling af
+                emnet gennem struktur og design.
               </p>
               <div class="forsidefoto">
                 <img src="img/emnesite02.png" alt="Emnesite projekt" />
@@ -415,6 +441,14 @@
                 havde brug for, hurtigt og effektivt. Jeg lærte meget om AI
                 billede generering og brugen af vektorgrafik i forhold til svg
                 på mit site.
+              </p>
+              <h3>Resultat</h3>
+              <p>
+                Projektet resulterede i en brugervenlig og handlingsorienteret
+                digital løsning til nødsituationer. Jeg udviklede et klart og
+                intuitivt interface med fokus på tilgængelighed og hurtig
+                informationsformidling samt anvendte vektorgrafik, SVG og
+                JavaScript til at understøtte funktionalitet og visuel klarhed.
               </p>
               <div class="forsidefoto">
                 <img src="img/emergency02.png" alt="Emergency projekt" />
@@ -472,6 +506,16 @@
                 nyttigt i forhold til at organisere forskellige opgaver i dette
                 gruppe arbejde. Det hjalp også i forhold til at finde dage til
                 at kunne lave indhold til sitet.
+              </p>
+              <h3>Resultat</h3>
+              <p>
+                Arbejdet resulterede i to gennemførte redesigns: et
+                eksperimenterende sandkassesite og et mere professionelt
+                virksomhedssite. Projekterne viste min evne til at tilpasse
+                design og indhold til forskellige målgrupper, arbejde
+                researchbaseret og anvende Adobe-værktøjer strategisk. Samtidig
+                gav brugen af SCRUM et struktureret og effektivt samarbejde i
+                gruppeprocessen.
               </p>
               <div class="forsidefoto">
                 <img src="img/toemnerproces01.png" alt="To emner projekt" />
