tilføjet indhold til fået ud af semestret

--- a/aboutme.html
+++ b/aboutme.html
@@ -152,10 +152,26 @@
       <section class="bon hvid lys andenlys">
         <h3>Det her er mig</h3>
         <div class="box03">
-          <img src="img/portræt02.png" alt="" /><cite
-            ><p>"Nu ved du lidt mere om mig"</p></cite
-          >
+          <img src="img/portræt02.png" alt="" />
         </div>
+        <strong><p>Hvad jeg har fået ud af semesteret</p></strong>
+        <p>
+          Hvad jeg har fået ud af semesteret Dette semester har styrket mig
+          inden for multimediedesign. Det har givet mig forståelse for hele
+          processen fra idé til færdig digital løsning. Jeg har arbejdet med
+          både design, kodning og indholdsstrategi og har lært, hvordan visuelle
+          valg, struktur og brugeroplevelse hænger tæt sammen. Gennem
+          projekterne er jeg blevet mere sikker i at omsætte kreative idéer til
+          funktionelle løsninger og arbejde mere målrettet.
+        </p>
+        <p>
+          Samtidig har jeg opnået erfaring med værktøjer, arbejdsmetoder og
+          samarbejdsformer, som har gjort mig mere bevidst om mit eget
+          arbejdsflow. Semesteret har bekræftet min motivation for at arbejde
+          med digitale løsninger og givet mig lyst til fortsat at udvikle mine
+          kompetencer inden for både design, kodning og formidling.
+        </p>
+        <cite><p>"Nu ved du lidt mere om mig"</p></cite>
 
         <div class="bottom-section"></div>
       </section>
