--- a/projekt.html
+++ b/projekt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Om Mig</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/delt.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css_projekter/style.css" />
